<resources>
    <string name="app_name">Banitro</string>
    <string name="profile">پروفایل</string>
    <string name="recent">تازه ها</string>
    <string name="incoming">ورودی</string>
    <string name="toast_click_again_to_exit">برای خروج مجددا کلیک نمایید</string>
    <string name="product_detail">جزئیات محصول</string>
    <string name="no_message_found">پیامی یافت نشد.</string>
    <string name="product_name">نام محصول</string>
    <string name="product_number">تعداد محصول</string>
    <string name="category">دسته بندی</string>
    <string name="categories">دسته بندی ها</string>
    <string name="submit_price">ارسال قیمت</string>
    <string name="send">ارسال</string>
    <string name="cancel">انصراف</string>
    <string name="price_toman">قیمت به تومان</string>
    <string name="internet_error_header">عدم اتصال به اینترنت</string>
    <string name="internet_error_message">اتصال شما به اینترنت برقرار نیست. برای استفاده از برنامه به اینترنت متصل شوید.</string>
    <string name="internet_wi_fi">اینترنت Wi-Fi</string>
    <string name="internet_mobile">اینترنت موبایل</string>
    <string name="suggested_price">قیمت پیشنهادی</string>
    <string name="delete">حذف</string>
    <string name="item_delete">حذف کردن آیتم؟</string>
    <string name="approved">تایید شده</string>
    <string name="approved_not">تایید نشده</string>
    <string name="full_name">نام و نام خانوادگی</string>
    <string name="phone">تلفن همراه</string>
    <string name="address">آدرس</string>
    <string name="full_name_description">نام و نام خانوادگی را وارد کنید.</string>
    <string name="phone_description">شماره تلفن "نام کاربری" شما می باشد.</string>
    <string name="address_description">آدرس شرکت یا محل کار را وارد کنید.</string>
    <string name="password_description">رمز عبور دلخواه خود را وارد کنید.</string>
    <string name="address_hint">آدرس محل کار</string>
    <string name="full_name_hint">نام کامل</string>
    <string name="phone_hint">*********09</string>
    <string name="password_hint">رمز عبور</string>
    <string name="choose_your_profile_image">تصویر پروفایل مورد نظر خود را انتخاب نمایید.</string>
    <string name="condition_offer">وضعیت پیشنهاد</string>
    <string name="short_description">توضیح مختصر</string>
    <string name="category_10">موتور و متعلقات</string>
    <string name="category_12">انتقال قدرت (گیربکس، پلوس، دیفرانسیل و ...)</string>
    <string name="category_14">سیستم تعلیق و فرمان</string>
    <string name="category_16">لوازم بدنه خارجی (چراغ، سپر و ...)</string>
    <string name="category_18">لوازم داخل کابین</string>
    <string name="category_20">سیستم ترمز</string>
    <string name="category_22">الکتریکی و الکترونیکی (استارت، دینام، ECU)</string>
    <string name="category_24">لوازم مصرفی (لنت، تسمه، فیلتر و ...)</string>
    <string name="category_26">روغن و سیالات</string>
    <string name="category_28">لوله و شیلنگ ها</string>
    <string name="login">ورود</string>
    <string name="submit">ارسال</string>
    <string name="approve">تایید</string>
    <string name="register">ثبت نام</string>
    <string name="password">گذرواژه</string>
    <string name="login_in">ورود به برنامه</string>
    <string name="username_login">نام کاربری (تلفن همراه)</string>
    <string name="enter_all_information">لطفا تمامی اطلاعات را وارد کنید.</string>
    <string name="wellcome">به بانیترو خوش آمدید.</string>
    <string name="logout">خروج</string>
    <string name="logout_title">خروج از حساب کاربری</string>
    <string name="logout_description">مطمئن به خروج از حسابتان هستید؟</string>
    <string name="new_product">درخواست قطعه جدید</string>
    <string name="product_model">مدل خودرو</string>
    <string name="product_year">سال ساخت</string>
    <string name="product_description">توضیح تکمیلی</string>
    <string name="product_chassis">شماره شاسی خودروی وارداتی</string>
</resources>