<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl">

    <android.support.constraint.ConstraintLayout
        android:layout_width="@dimen/dialog_fragment_width"
        android:layout_height="@dimen/reply_dialog_fragment_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.Guideline
            android:id="@+id/dialog_fragment_reply_gl_y1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <android.support.constraint.Guideline
            android:id="@+id/dialog_fragment_reply_gl_y25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <android.support.constraint.Guideline
            android:id="@+id/dialog_fragment_reply_gl_y45"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45" />

        <android.support.constraint.Guideline
            android:id="@+id/dialog_fragment_reply_gl_y5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <android.support.constraint.Guideline
            android:id="@+id/dialog_fragment_reply_gl_y7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7" />

        <android.support.constraint.Guideline
            android:id="@+id/dialog_fragment_reply_gl_y75"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.75" />

        <android.support.constraint.Guideline
            android:id="@+id/dialog_fragment_reply_gl_y9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

        <android.support.constraint.Guideline
            android:id="@+id/dialog_fragment_reply_gl_x1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <android.support.constraint.Guideline
            android:id="@+id/dialog_fragment_reply_gl_x3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <android.support.constraint.Guideline
            android:id="@+id/dialog_fragment_reply_gl_x5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <android.support.constraint.Guideline
            android:id="@+id/dialog_fragment_reply_gl_x9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_price"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="@id/dialog_fragment_reply_gl_x1"
            app:layout_constraintTop_toTopOf="@id/dialog_fragment_reply_gl_y1" />

        <EditText
            android:id="@+id/dialog_fragment_reply_et_description"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/edit_text_shape"
            android:hint="@string/short_description"
            android:inputType="text"
            android:lines="1"
            android:maxLength="20"
            android:padding="@dimen/padding_8"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_15"
            app:layout_constraintBottom_toBottomOf="@id/dialog_fragment_reply_gl_y45"
            app:layout_constraintLeft_toLeftOf="@id/dialog_fragment_reply_gl_x9"
            app:layout_constraintRight_toRightOf="@id/dialog_fragment_reply_gl_x1"
            app:layout_constraintTop_toTopOf="@id/dialog_fragment_reply_gl_y25" />

        <EditText
            android:id="@+id/dialog_fragment_reply_et_price"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/edit_text_shape"
            android:hint="@string/price_toman"
            android:inputType="number"
            android:lines="1"
            android:maxLength="12"
            android:padding="@dimen/padding_8"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_15"
            app:layout_constraintBottom_toBottomOf="@id/dialog_fragment_reply_gl_y7"
            app:layout_constraintLeft_toLeftOf="@id/dialog_fragment_reply_gl_x9"
            app:layout_constraintRight_toRightOf="@id/dialog_fragment_reply_gl_x1"
            app:layout_constraintTop_toTopOf="@id/dialog_fragment_reply_gl_y5" />

        <Button
            android:id="@+id/dialog_fragment_reply_btn_send"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@null"
            android:gravity="bottom|right"
            android:text="@string/send"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_15"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/dialog_fragment_reply_gl_y9"
            app:layout_constraintLeft_toLeftOf="@id/dialog_fragment_reply_gl_x3"
            app:layout_constraintRight_toRightOf="@id/dialog_fragment_reply_gl_x1"
            app:layout_constraintTop_toTopOf="@id/dialog_fragment_reply_gl_y75" />

        <Button
            android:id="@+id/dialog_fragment_reply_btn_cancel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@null"
            android:gravity="bottom|right"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_15"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/dialog_fragment_reply_gl_y9"
            app:layout_constraintLeft_toLeftOf="@id/dialog_fragment_reply_gl_x5"
            app:layout_constraintRight_toRightOf="@id/dialog_fragment_reply_gl_x3"
            app:layout_constraintTop_toTopOf="@id/dialog_fragment_reply_gl_y75" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>